--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "~0.4.5",
     "grunt-concurrent": "~0.5.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-imagemin": "~0.1.4",
     "grunt-notify": "~0.3.0",
     "grunt-shell": "~0.7.0",
