--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-imagemin": "~0.1.4",
+    "grunt-contrib-uglify": "~0.7.0",
     "grunt-notify": "~0.3.0",
     "grunt-shell": "~0.7.0",
     "load-grunt-tasks": "~0.4.0"
